tests/integration/snapshots/integration__rules__one_non_existing_ignored_rule.snap
---
source: tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).arg(\".\").arg(\"--ignore-rules\").arg(\"foo\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules in `--ignore-rules`: foo

----- args -----
. --ignore-rules foo
