tests/integration/snapshots/integration__rules__one_non_existing_rule.snap
---
source: tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).arg(\".\").arg(\"--rules\").arg(\"foo\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules: foo

----- args -----
. --rules foo
