tests/integration/snapshots/integration__rules__several_non_existing_ignored_rules.snap
---
source: tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).arg(\".\").arg(\"--ignore-rules\").arg(\"foo,any_is_na,barbaz\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules in `--ignore-rules`: foo, barbaz

----- args -----
. --ignore-rules foo,any_is_na,barbaz
